--- a/public/index.html
+++ b/public/index.html
@@ -5,21 +5,21 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/public/apple-touch-icon.png"
+      href="/public/apple-touch-icon.ico"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/public/favicon-32x32.png"
+      href="/public/favicon-32x32.ico"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/public/favicon-16x16.png"
+      href="/public/favicon-16x16.ico"
     />
-    <link rel="manifest" href="/public/site.webmanifest" />
+    <link rel="manifest" href="/public/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
